--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -605,6 +605,18 @@
   type: SWING
   autoSwing: true
   size: 7.5
+圣火之刃:
+  type: SWING
+  autoSwing: true
+  size: 11
+星河之刃:
+  type: SWING
+  autoSwing: true
+  size: 6
+格拉克斯:
+  type: SWING
+  autoSwing: true
+  size: 7
 ####
 钴薙刀:
   type: STAB
