tweak and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Residence/flags.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Residence/flags.yml
@@ -63,7 +63,7 @@ Global:
     keepinv: false
     keepexp: false
     shop: true
-    bank: false
+    bank: true
     anvil: true
     admin: true
     anvilbreak: true
