tweak and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -3,6 +3,7 @@ messages:
     玩法提示:
       texts:
       - BOSS会将召唤者附近所有达成挑战所需游戏进度的玩家视为敌人并以此获得生命加成。因此请尽量邀请世界中所有符合挑战资格的玩家一同作战，这样会大大增强成功率。造成伤害足够的玩家都将自动获得一份战利品哦~
+      - 右键基岩时可以进入上一层或下一层世界
     新手期:
       deactivate_progress: "克苏鲁之眼"
       texts:
@@ -10,7 +11,6 @@ messages:
       - 请不要迟疑，迅速去挖掘原木，制作火把后下矿，提升自己的实力吧
       - 挖到生命水晶后可以右键使用增加生命上限哦~
       - 点击背包里的合成格子可以打开随身合成配方列表
-      - <name>，你知道shift+右键合成台可以查看所有配方吗？
       - 你如果感觉已经准备好了，请在合成台中制作一个祭坛，放置后可以合成BOSS召唤物。
       - 在做好准备后，可以尝试挑战史莱姆王，荒漠灾虫和克苏鲁之眼。战胜克苏鲁之眼后，我将会指导您的下一步行动。
       - 记得合成圈地锄头后圈地，这样财物才不会失窃！
@@ -18,10 +18,10 @@ messages:
       activate_progress: "克苏鲁之眼"
       deactivate_progress: "世界吞噬者"
       texts:
-      - 丛林地下的夜光蘑菇可以用来合成召唤物。
+      - 丛林地下的夜光蘑菇可以用来合成菌生蟹的召唤物。
       - <name>，我听说你已经击败了克苏鲁之眼了。恭喜！
-      - 据说，地下有一种多节的巨虫。它们在腐化之地隐匿，而让他们现身需要筹备一些虫饵。这种虫的体表有鳞片，可以用来做更好的装备
-      - 用克苏鲁之眼宝藏袋开的腐化种子右键泥土可以把一片地方变成腐化哦。不过，要小心腐化之地的蔓延……
+      - 据说，腐化之地有一种多节的巨虫，让他们现身需要筹备一些虫饵。这种虫的体表有鳞片，可以用来做更好的装备。
+      - 用克苏鲁之眼宝藏袋开的腐化种子右键泥土可以把一片地方变成腐化哦。
     世界吞噬者后:
       activate_progress: "世界吞噬者"
       deactivate_progress: "骷髅王"
@@ -36,15 +36,14 @@ messages:
       deactivate_progress: "血肉之墙"
       texts:
       - 史莱姆的神祇……有趣的传言。
-      - 据说，岩浆引燃木板时的火焰可以激发某种特殊结构，从而注入足以把人传送到地底世界的魔力。
       - 你现在可以安全进入地牢了。地牢中的敌怪和武器可以为你今后的冒险提供助力！
     血肉之墙后:
       activate_progress: "血肉之墙"
       deactivate_progress: "机械三王"
       texts:
-      - 拜托，你很机车诶！
+      - 你听说过吗？丛林的地下可以偶尔生长出生命果，吃掉能获得新的力量！
       - 极寒的冰天雪地中，有一种强大的生物游荡……
-      - 硫磺海里的巨型蠕虫不只是传说！
+      - 硫磺海里的巨型蠕虫不只是传说！有趣的是，它们与沙漠里的某条巨虫有很近的亲缘关系。
       - 我很好奇，如果能够击败并拆解坚固的机器，能铸造出怎样的兵器呢？
       - 去挖铁吧，传说用铁和其他物品可以做出很神奇的东西，能引来某些机械的注意！虽然这不一定是好事儿……
       - 神圣之地和腐化之地地表的生物开始携带珍贵的碎片了，用这些碎片似乎可以合成新武器！
@@ -55,7 +54,6 @@ messages:
       deactivate_progress: "世纪之花"
       texts:
       - 硫火之崖的元素灵在一场大战中失去了她所有的子民。去为她送上解脱吧……
-      - 你听说过吗？丛林的地下可以偶尔生长出生命果，吃掉能获得新的力量！
       - 地下丛林有几率长出一种神奇的红色果实，它们深受地下巨型植物的眷顾！不过，最好不要摘下这种果子，除非你想要激怒未知的植物……
       - 这么大的植物……真的有可能存在吗？
     世纪之花后:
@@ -71,6 +69,7 @@ messages:
       activate_progress: "石巨人"
       deactivate_progress: "月球领主"
       texts:
+      - 硫磺海下的深渊中有一种坚硬炽热的矿石，请利用石巨人掉落的镐尝试挖掘。
       - 丛林地下偶尔会出现松露虫，用它在海里钓鱼可能会引出庞然大物！
       - 反抗者仅仅为抵抗嘉登，融合死去同伴的血肉和黑魔法制成了怪物。它践踏了所见的一切，包括制作者本人。
       - 你听说过拜月教吗？据说他们的信徒最近开始出现在地牢里。一定要小心，他们看起来令人毛骨悚然！
