--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -15,6 +15,7 @@ spawnInfo:
         钨钢回转器: 0.002
         钨钢悬浮坦克: 0.002
         钨钢无人机: 0.002
+        钨钢漫步者: 0.002
     night:
         僵尸: 16
         恶魔之眼: 8
