bugfix and tweak

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -209,20 +209,20 @@ shops:
     - 弹壳
     - 狱炎箭
     - P90
+    - 初级火箭
+    - 集束火箭
     世纪之花:
     - 爆炸杰克南瓜灯
     - 玉米糖
     - 尖桩
-    - 初级火箭
-    - 集束火箭
     血月:
       default:
       - 银子弹
       - 邪箭
-      世纪之花:
+      血肉之墙:
       - 二级火箭
     日食:
-      世纪之花:
+      血肉之墙:
       - 三级火箭
       - 四级火箭
   爆破专家:
