--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/shadow_fireball.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/shadow_fireball.properties
@@ -1,6 +1,5 @@
 type=item
 items=438
 model=_proj1
-texture.potion_bottle_splash=shadow_fireball
-texture.potion_overlay=blank
+texture=shadow_fireball
 nbt.display.Name=\u6697\u5f71\u7130
