bugfix and tweak

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -1532,7 +1532,8 @@
   item: LEASH
   lore:
   - §r[饰品]
-  - §r免疫破损盔甲
+  attributes:
+    buffImmune: 破损盔甲
   worth: 2000000
   rarity: 4
 新手版挥发明胶:
@@ -1994,6 +1995,7 @@
     defence: 32
     damageTakenMulti: -0.05
     maxHealth: 40
+    knockbackResistance: 1
   worth: 9600000
   rarity: 7
 宝光盾牌:
